--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,113 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  font-family: -apple-system,
+  BlinkMacSystemFont,
+  "Segoe UI",
+  Roboto,
+  "Helvetica Neue",
+  Arial,
+  "Noto Sans",
+  sans-serif,
+  "Apple Color Emoji",
+  "Segoe UI Emoji",
+  "Segoe UI Symbol",
+  "Noto Color Emoji";
+  font-size: 0.88rem;
+  background: #f1f4f6;
+  position: relative;
+  color: #495057;
+}
+
+.comapas {
+  @import "assets/styles/login";
+  @import "assets/styles/inputs";
+
+  .loading-overlay {
+    display: none;
+    background: rgba(26, 26, 26, 0.7);
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 1051;
+    top: 0;
+
+    .image-container {
+      position: fixed;
+      z-index: 1052;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    &.show {
+      display: block;
+    }
+  }
+
+  .card {
+    border-radius: 8px;
+
+    &.caracteristicaSel {
+      border-radius: 8px;
+
+      .accion {
+        cursor: pointer;
+        margin-left: 8px;
+      }
+    }
+
+    &.caracteristica {
+      .card-header {
+        cursor: pointer;
+      }
+    }
+  }
+
+  .btn {
+
+    &.btn-link {
+      box-shadow: none;
+
+      &:hover {
+        box-shadow: none;
+      }
+    }
+  }
+
+  .container-fluid {
+
+    &.main {
+      padding-left: 36px;
+      padding-right: 36px;
+    }
+
+  }
+
+  .campo-editable {
+    label {
+      color: #747272;
+      font-size: 12px;
+    }
+  }
+
+  .upperCase {
+    input {
+      text-transform: uppercase;
+    }
+  }
+
+  .label-checkbox {
+    label {
+      color: #747272;
+    }
+  }
+
+  .k-grid tr.even {
+    background-color: #4e5fbb;
+    color: white;
+  }
+
+  .k-notification-group {
+    z-index: 10000;
+  }
+}
