--- a/src/app/route/admin/user/user.component.html
+++ b/src/app/route/admin/user/user.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid main">
+<div class="container-lg container-fluid">
   <div class="row">
     <div class="col-12">
       <div class="card">
