--- a/src/app/route/admin/criterion/criterion-field-modal/criterion-field-modal.component.html
+++ b/src/app/route/admin/criterion/criterion-field-modal/criterion-field-modal.component.html
@@ -1,11 +1,11 @@
-<div class="modal fade" id="criterionFieldModal">
+<div class="modal fade" id="FieldModal">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">
-          {{'Components.Structure.Criterion.CriterionFieldModal.title' | translate}}
+        <h2 class="modal-title">
+          {{PREFIX + '.title' | translate}}
           {{criterion.name}}
-        </h5>
+        </h2>
       </div>
       <div class="modal-body">
 
@@ -19,10 +19,10 @@
             <thead>
             <tr>
               <th></th>
-              <th>{{'Components.Structure.Criterion.CriterionFieldModal.label' | translate}}</th>
-              <th>{{'Components.Structure.Criterion.CriterionFieldModal.name' | translate}}</th>
-              <th>{{'Components.Structure.Criterion.CriterionFieldModal.score' | translate}}</th>
-              <th>{{'Components.Structure.Criterion.CriterionFieldModal.evidence' | translate}}</th>
+              <th>{{PREFIX + '.label' | translate}}</th>
+              <th>{{PREFIX + '.name' | translate}}</th>
+              <th>{{PREFIX + '.score' | translate}}</th>
+              <th>{{PREFIX + '.evidence' | translate}}</th>
             </tr>
             </thead>
             <tbody>
@@ -39,10 +39,11 @@
             </tr>
             </tbody>
           </table>
-      </div>
-      <div class="modal-footer">
-        <ct-button [label]="'Core.btnCancel'" [type]="buttonType.DANGER" (click)="close()"></ct-button>
-        <ct-button [label]="'Core.btnSave'" [type]="buttonType.PRIMARY" (click)="save()"></ct-button>
+        </div>
+        <div class="modal-footer">
+          <ct-button [label]="'Core.btnCancel'" [type]="buttonType.DANGER" (click)="close()"></ct-button>
+          <ct-button [label]="'Core.btnSave'" [type]="buttonType.PRIMARY" (click)="save()"></ct-button>
+        </div>
       </div>
     </div>
   </div>
