--- a/src/app/route/admin/sand-box/sand-box-criterion/sand-box-criterion.component.html
+++ b/src/app/route/admin/sand-box/sand-box-criterion/sand-box-criterion.component.html
@@ -1,40 +1,42 @@
-<div class="modal fade" id="criterionFieldModal">
+<div class="modal fade" id="criterionModal">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title">
-          {{'Components.Structure.Criterion.CriterionFieldModal.title' | translate}}
-          {{criterion.name}}
-        </h5>
+        <h2 class="modal-title">
+          {{PREFIX + '.title' | translate}}
+        </h2>
       </div>
       <div class="modal-body">
-
         <div class="form-group">
-          <ct-textfield [placeHolder]="'Components.Structure.Field.searchPlaceHolder'" #search
+          <ct-textfield [placeHolder]="PREFIX+'.searchPlaceHolder'" #search
                         (keyup)="searchByName(search.value)"></ct-textfield>
         </div>
 
         <div class="table-responsive">
           <table class="table table-striped">
             <thead>
-            <tr>
-              <th></th>
-              <th>{{'Components.Structure.Criterion.CriterionFieldModal.label' | translate}}</th>
-              <th>{{'Components.Structure.Criterion.CriterionFieldModal.name' | translate}}</th>
-              <th>{{'Components.Structure.Criterion.CriterionFieldModal.score' | translate}}</th>
-              <th>{{'Components.Structure.Criterion.CriterionFieldModal.evidence' | translate}}</th>
+            <tr class="d-flex">
+              <th class="col-1"></th>
+              <th class="col-4">
+                {{PREFIX + '.name' | translate}}
+              </th>
+              <th class="col-7">
+                {{PREFIX + '.count' | translate}}
+              </th>
             </tr>
             </thead>
             <tbody>
-            <tr *ngFor="let field of fields; let i = index">
-              <td>
-                <ct-check-box [(ngModel)]="field.select"></ct-check-box>
+            <tr class="d-flex" *ngFor="let criterion of criterionList; let i = index">
+              <td class="col-1">
+                <button type="button" class="btn btn-outline-primary btn-sm" (click)="add(criterion)">
+                  <fa-icon [icon]="faPlus"></fa-icon>
+                </button>
               </td>
-              <td>{{field.label}}</td>
-              <td>{{field.name}}</td>
-              <td>{{field.score}}</td>
-              <td class="text-success">
-                <fa-icon *ngIf="field.evidence" [icon]="faCheck"></fa-icon>
+              <td class="col-4">
+                {{criterion.name}}
+              </td>
+              <td class="col-7">
+                {{criterion.fields.length}}
               </td>
             </tr>
             </tbody>
@@ -42,8 +44,8 @@
         </div>
         <div class="modal-footer">
           <ct-button [label]="'Core.btnCancel'" [type]="buttonType.DANGER" (click)="close()"></ct-button>
-          <ct-button [label]="'Core.btnSave'" [type]="buttonType.PRIMARY" (click)="save()"></ct-button>
         </div>
       </div>
     </div>
   </div>
+</div>
