--- a/src/app/route/admin/sand-box/sand-box.component.html
+++ b/src/app/route/admin/sand-box/sand-box.component.html
@@ -1,15 +1,36 @@
 <div class="container-lg container-fluid">
-  <div class="row justify-content-center">
-    <div class="col-12 col-lg-10 col-xl-8">
-      <div class="row">
-        <div class="col-12">
-          <div class="card">
-            <div class="card-body">
-              <h4>{{'Components.Structure.SandBox.title' | translate}}</h4>
+
+  <div class="row">
+    <div class="col-12">
+      <div class="card">
+        <div class="card-body">
+          <div class="row">
+            <div class="col-12">
+              <h1>{{PREFIX + '.title' | translate}}</h1>
             </div>
           </div>
+          <div cdkDropList (cdkDropListDropped)="drop($event)">
+            <div class="row" *ngFor="let criterion of selectedCriterion; let i = index" cdkDrag>
+              <div class="col-12 text-center">
+                <fa-icon [icon]="faGripHorizontal" cdkDragHandle></fa-icon>
+              </div>
+              <div class="col-12">
+                <app-sand-box-criterion-card [criterion]="criterion"
+                                             [delete]="delete"></app-sand-box-criterion-card>
+              </div>
+            </div>
+          </div>
+
+          <button type="button" class="btn btn-outline-primary btn-lg btn-block" (click)="addCriterion()">
+            {{'Core.btnAdd' | translate}}
+          </button>
         </div>
       </div>
     </div>
   </div>
+
 </div>
+<app-sand-box-criterion [criterionList]="criterionList"
+                        [criterionCache]="criterionCache"
+                        [open]="open"
+                        [refresh]="refresh"></app-sand-box-criterion>
