--- a/src/app/route/admin/sand-box/sand-box.component.html
+++ b/src/app/route/admin/sand-box/sand-box.component.html
@@ -16,7 +16,9 @@
               </div>
               <div class="col-12">
                 <app-sand-box-criterion-card [criterion]="criterion"
-                                             [delete]="delete"></app-sand-box-criterion-card>
+                                             [delete]="delete"
+                                             [save]="save"
+                                             [config]="config"></app-sand-box-criterion-card>
               </div>
             </div>
           </div>
