--- a/src/app/structure/home-login/home-login.component.html
+++ b/src/app/structure/home-login/home-login.component.html
@@ -3,6 +3,6 @@
             [appPassword]="'secret'"
             [icon]="faGraduationCap"
             [title]="'Comapas'"
-            [pathHome]="'/comapas/inicio'"></ct-login>
+            [pathHome]="'/comapas/home'"></ct-login>
 </div>
 
