--- a/src/app/route/admin/criterion/criterion.component.html
+++ b/src/app/route/admin/criterion/criterion.component.html
@@ -5,10 +5,12 @@
 
         <div class="card-body">
 
-          <div class="row">
+          <div class="row mb-2">
             <div class="col-12">
-              <h1>{{PREFIX+'.title' | translate}}</h1>
+              <h1>{{PREFIX + '.title' | translate}}</h1>
+            </div>
 
+            <div class="col-12">
               <div class="float-right">
                 <button type="button" class="btn btn-primary" (click)="addCriterion()">
                   {{'Core.btnAdd' | translate}}
@@ -20,8 +22,8 @@
 
           <div class="row">
 
-            <div class="col-md-3" *ngFor="let criterion of criterionList; let i = index">
-              <div class="card criterion-card">
+            <div class="col-sm-12 col-md-4 col-lg-3" *ngFor="let criterion of criterionList; let i = index">
+              <div class="card criterion-card mb-2">
                 <div class="card-header">
                   <h2 class="card-title">
                     {{criterion.name}}
@@ -31,7 +33,7 @@
                 <ul class="list-group list-group-flush">
                   <li class="list-group-item d-flex justify-content-between align-items-center"
                       *ngFor="let field of criterion.fields; let i = index">
-                    {{field.field.label}}
+                    {{i + 1}}.-{{field.field.label}}
                     <span class="badge badge-primary badge-pill">
                       {{field.field.score}}
                     </span>
@@ -43,7 +45,7 @@
                     {{'Core.btnEdit' | translate}}
                   </button>
                   <button type="button" class="btn btn-primary" (click)="addFields(criterion)">
-                    {{PREFIX+'.fields' | translate}}
+                    {{PREFIX + '.fields' | translate}}
                   </button>
                 </div>
               </div>
@@ -60,6 +62,5 @@
 <app-criterion-modal [open]="open"
                      [refresh]="refresh"></app-criterion-modal>
 <app-criterion-field-modal [fields]="fields"
-                           [fieldsCache]="fieldsCache"
                            [open]="openCriField"
                            [refresh]="refresh"></app-criterion-field-modal>
