--- a/src/app/route/admin/field/field.component.html
+++ b/src/app/route/admin/field/field.component.html
@@ -7,7 +7,7 @@
 
           <div class="form-group">
             <ct-textfield [placeHolder]="PREFIX+'.searchPlaceHolder'" #search
-                          (keyup)="searchByName(search.value)"></ct-textfield>
+                          (keyup)="searchByWord(search.control.value)"></ct-textfield>
           </div>
 
           <div class="row form-group">
@@ -19,43 +19,87 @@
                 </button>
               </div>
 
-              <div class="table-responsive">
-                <table class="table table-striped">
-                  <thead>
-                  <tr>
-                    <th>{{PREFIX + '.idField' | translate}}</th>
-                    <th>{{PREFIX + '.label' | translate}}</th>
-                    <th>{{PREFIX + '.score' | translate}}</th>
-                    <th>{{PREFIX + '.type' | translate}}</th>
-                    <th>{{PREFIX + '.catalog' | translate}}</th>
-                    <th>{{PREFIX + '.evidence' | translate}}</th>
-                    <th>{{PREFIX + '.required' | translate}}</th>
-                    <th></th>
-                  </tr>
-                  </thead>
-                  <tbody>
-                  <tr *ngFor="let field of fields; let i = index">
-                    <td>{{field.idField}}</td>
-                    <td>{{field.label}}</td>
-                    <td>{{field.score}}</td>
-                    <td>{{field.type}}</td>
-                    <td>{{field.catalog}}</td>
-                    <td class="text-success">
-                      <fa-icon *ngIf="field.evidence" [icon]="faCheck"></fa-icon>
+              <div class="mat-elevation-z8">
+                <table mat-table [dataSource]="dataSource">
+
+                  <ng-container matColumnDef="idField">
+                    <th mat-header-cell *matHeaderCellDef>
+                      {{PREFIX + '.idField' | translate}}
+                    </th>
+                    <td mat-cell *matCellDef="let element">
+                      {{element.idField}}
                     </td>
-                    <td class="text-success">
-                      <fa-icon *ngIf="field.required" [icon]="faCheck"></fa-icon>
+                  </ng-container>
+
+                  <ng-container matColumnDef="label">
+                    <th mat-header-cell *matHeaderCellDef>
+                      {{PREFIX + '.label' | translate}}
+                    </th>
+                    <td mat-cell *matCellDef="let element">
+                      {{element.label}}
                     </td>
-                    <td>
-                      <button type="button" class="btn btn-primary" (click)="editField(field)">
+                  </ng-container>
+
+                  <ng-container matColumnDef="score">
+                    <th mat-header-cell *matHeaderCellDef>
+                      {{PREFIX + '.score' | translate}}
+                    </th>
+                    <td mat-cell *matCellDef="let element">
+                      {{element.score}}
+                    </td>
+                  </ng-container>
+
+                  <ng-container matColumnDef="type">
+                    <th mat-header-cell *matHeaderCellDef>
+                      {{PREFIX + '.type' | translate}}
+                    </th>
+                    <td mat-cell *matCellDef="let element">
+                      {{element.type}}
+                    </td>
+                  </ng-container>
+
+                  <ng-container matColumnDef="catalog">
+                    <th mat-header-cell *matHeaderCellDef>
+                      {{PREFIX + '.catalog' | translate}}
+                    </th>
+                    <td mat-cell *matCellDef="let element">
+                      {{element.catalog}}
+                    </td>
+                  </ng-container>
+
+                  <ng-container matColumnDef="evidence">
+                    <th mat-header-cell *matHeaderCellDef>
+                      {{PREFIX + '.evidence' | translate}}
+                    </th>
+                    <td mat-cell *matCellDef="let element" class="text-success">
+                      <fa-icon *ngIf="element.evidence" [icon]="faCheck"></fa-icon>
+                    </td>
+                  </ng-container>
+
+                  <ng-container matColumnDef="required">
+                    <th mat-header-cell *matHeaderCellDef>
+                      {{PREFIX + '.required' | translate}}
+                    </th>
+                    <td mat-cell *matCellDef="let element" class="text-success">
+                      <fa-icon *ngIf="element.required" [icon]="faCheck"></fa-icon>
+                    </td>
+                  </ng-container>
+
+                  <ng-container matColumnDef="edit">
+                    <th mat-header-cell *matHeaderCellDef>
+                    </th>
+                    <td mat-cell *matCellDef="let element">
+                      <button type="button" class="btn btn-primary" (click)="editField(element)">
                         <fa-icon [icon]="faPencilAlt"></fa-icon>
                       </button>
                     </td>
-                  </tr>
-                  </tbody>
-                </table>
-              </div>
+                  </ng-container>
 
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+                <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+              </div>
             </div>
           </div>
         </div>
