--- a/src/app/route/admin/user/user.component.html
+++ b/src/app/route/admin/user/user.component.html
@@ -7,7 +7,7 @@
 
           <div class="form-group">
             <ct-textfield [placeHolder]="PREFIX+'.searchPlaceHolder'" #search
-                          (keyup)="searchByName(search.value)"></ct-textfield>
+                          (keyup)="searchByWord(search.control.value)"></ct-textfield>
           </div>
 
           <div class="row form-group">
@@ -19,50 +19,94 @@
                 </button>
               </div>
 
-              <div class="table-responsive">
-                <table class="table table-striped">
-                  <thead>
-                  <tr>
-                    <th>{{PREFIX + '.id' | translate}}</th>
-                    <th>{{PREFIX + '.userName' | translate}}</th>
-                    <th>{{PREFIX + '.email' | translate}}</th>
-                    <th>{{PREFIX + '.ip' | translate}}</th>
-                    <th>{{PREFIX + '.role' | translate}}</th>
-                    <th>{{PREFIX + '.active' | translate}}</th>
-                    <th></th>
-                  </tr>
-                  </thead>
-                  <tbody>
-                  <tr *ngFor="let user of users; let i = index">
-                    <td>{{user.id}}</td>
-                    <td>{{user.username}}</td>
-                    <td>{{user.email}}</td>
-                    <td>{{user.ip}}</td>
-                    <td>
-                      {{getRole(user.idRole)}}
+              <div class="mat-elevation-z8">
+                <table mat-table [dataSource]="dataSource">
+
+                  <ng-container matColumnDef="id">
+                    <th mat-header-cell *matHeaderCellDef>
+                      {{PREFIX + '.id' | translate}}
+                    </th>
+                    <td mat-cell *matCellDef="let element">
+                      {{element.id}}
                     </td>
-                    <td>
+                  </ng-container>
+
+                  <ng-container matColumnDef="username">
+                    <th mat-header-cell *matHeaderCellDef>
+                      {{PREFIX + '.userName' | translate}}
+                    </th>
+                    <td mat-cell *matCellDef="let element">
+                      {{element.username}}
+                    </td>
+                  </ng-container>
+
+                  <ng-container matColumnDef="email">
+                    <th mat-header-cell *matHeaderCellDef>
+                      {{PREFIX + '.email' | translate}}
+                    </th>
+                    <td mat-cell *matCellDef="let element">
+                      {{element.email}}
+                    </td>
+                  </ng-container>
+
+                  <ng-container matColumnDef="ip">
+                    <th mat-header-cell *matHeaderCellDef>
+                      {{PREFIX + '.ip' | translate}}
+                    </th>
+                    <td mat-cell *matCellDef="let element">
+                      {{element.ip}}
+                    </td>
+                  </ng-container>
+
+                  <ng-container matColumnDef="role">
+                    <th mat-header-cell *matHeaderCellDef>
+                      {{PREFIX + '.role' | translate}}
+                    </th>
+                    <td mat-cell *matCellDef="let element">
+                      {{getRole(element.idRole)}}
+                    </td>
+                  </ng-container>
+
+                  <ng-container matColumnDef="active">
+                    <th mat-header-cell *matHeaderCellDef>
+                      {{PREFIX + '.active' | translate}}
+                    </th>
+                    <td mat-cell *matCellDef="let element">
                       <button type="button" class="btn btn-success"
-                              *ngIf="user.active"
-                              (click)="changeActive(user)">
+                              *ngIf="element.active"
+                              (click)="changeActive(element)">
                         <fa-icon [icon]="faCheck"></fa-icon>
                       </button>
                       <button type="button" class="btn btn-danger"
-                              *ngIf="!user.active"
-                              (click)="changeActive(user)">
+                              *ngIf="!element.active"
+                              (click)="changeActive(element)">
                         <fa-icon [icon]="faTimesCircle"></fa-icon>
                       </button>
                     </td>
-                    <td>
-                      <button type="button" class="btn btn-primary" (click)="editUser(user)">
+                  </ng-container>
+
+                  <ng-container matColumnDef="edit">
+                    <th mat-header-cell *matHeaderCellDef>
+                    </th>
+                    <td mat-cell *matCellDef="let element">
+                      <button type="button" class="btn btn-primary" (click)="editUser(element)">
                         <fa-icon [icon]="faPencilAlt"></fa-icon>
                       </button>
                     </td>
-                  </tr>
-                  </tbody>
-                </table>
-              </div>
+                  </ng-container>
 
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+                  <!-- Row shown when there is no matching data. -->
+                  <tr class="mat-row" *matNoDataRow>
+                    <td class="mat-cell" colspan="4">
+                      {{'Components.Table.noData' | translate}}"{{search.control.value}}"
+                    </td>
+                  </tr>
+                </table>
+                <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+              </div>
             </div>
           </div>
         </div>
@@ -70,5 +114,6 @@
     </div>
   </div>
 </div>
-<app-user-modal [refresh]="refresh"
+<app-user-modal [company]="company"
+                [refresh]="refresh"
                 [open]="open"></app-user-modal>
