--- a/src/app/route/home/institute/institute-table/institute-table.component.html
+++ b/src/app/route/home/institute/institute-table/institute-table.component.html
@@ -4,7 +4,7 @@
 
     <div class="form-group">
       <ct-textfield [placeHolder]="PREFIX+'.searchPlaceHolder'" #search
-                    (keyup)="searchByWord(search.control.value)"></ct-textfield>
+                    (keyup)="searchByWord(search.value)"></ct-textfield>
     </div>
 
     <div class="row form-group">
@@ -73,7 +73,7 @@
             <!-- Row shown when there is no matching data. -->
             <tr class="mat-row" *matNoDataRow>
               <td class="mat-cell" colspan="4">
-                {{'Components.Table.noData' | translate}}"{{search.control.value}}"
+                {{'Components.Table.noData' | translate}}"{{search.value}}"
               </td>
             </tr>
           </table>
